# icfp-2024

./: .clippy.toml  .gitignore  Cargo.toml  README.md  run
.github/workflows/: build.yml
problems/3d/: 3d0.solve  3d1  3d1.solve  3d2.solve  3d3.solve  README.md  STUFF.md
problems/efficiency/: README.md
problems/lambdaman/: README.md
problems/spaceship/: README.md  spaceship1.solution
solver/: Cargo.toml
solver/src/: communicator.rs  evaluator.rs  main.rs  parser.rs  problems.rs
solver/src/problems/: lambdaman.rs  spaceship.rs  spacetime.rs
viz/: Cargo.toml
viz/src/: main.rs
