[workspace]
resolver = "2"
members = ["viz", "solver"]

[workspace.package]
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.78.0"

[workspace.lints.rust]
warnings = 'deny'
unsafe_code = "forbid"

[workspace.lints.clippy]
# Groups
suspicious = "deny"
complexity = 'deny'
style = 'deny'
cargo = "deny"
perf = 'allow'
pedantic = 'allow'

# Individual
unwrap_used = "allow" # for now :)
unwrap_in_result = "deny"

[workspace.dependencies]
bevy = "0.13"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7.5", features = ["tracing", "http2"] }
bytes = { version = "1.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.6", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
eyre = "0.6.12"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tonic = { version = "0.11.0", features = ["zstd"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["serde", "serde_json", "env-filter", "time", "tracing-log", "json"] }
serde_json = "1"
