[package]
name = "solver"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
clap.workspace = true
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[lints]
workspace = true
