[package]
name = "viz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
clap.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
bevy.workspace = true

[lints]
workspace = true
