[package]
name = "viz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
bevy.workspace = true
color-eyre.workspace = true

# https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev.package."*"]
opt-level = 1
incremental = true

[lints]
workspace = true
